examples/test/testpolicy4441.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4441
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key49: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value44
          key10: value7
          key21: value12
      podSelector:
        matchLabels:
          key22: value32
